<resources>
    <string name="app_name">iWeaver</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!--Login xml Strings -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_submit">Submit</string>
    <string name="login_create_account">need an account ? </string>
    <string name="login_rememberme">Remember me</string>
    <string name="login_forgot_password">Forgot Password ?</string>
    <string name="login_signup">Sign Up</string>
    <string name="login_signin">Sign In</string>

    <!--Sign Up xml strings -->
    <string name="signupTitle">Sign Up</string>
    <string name="signUp_submit">Sign Up</string>
    <string name="signUp_enter_name">Full Name</string>
    <string name="signUp_enter_mobile">Mobile No.</string>
    <string name="signUp_name">Full Name</string>
    <string name="signUp_password">Password</string>
    <string name="signUp_confirm_password">Confirm Password</string>
    <string name="signUp_already_member">Already Member ? </string>
    <string name="signUp_date_of_birth">Date of Birth(dd/mm/yyyy)</string>
    <string name="signUp_gender_male">Male</string>
    <string name="signUp_gender_female">Female</string>
    <!-- Forgot Password xml strings-->
    <string name="forgotpasswordTitle">Forgot Password</string>
    <string name="forgot_password_new_password">Password</string>
    <string name="forgot_password_submit">Send</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_the_email">Enter Registered Email .</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>