<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/layout_include"
            layout= "@layout/layout_common_toolbar"></include>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp"
        android:weightSum="1">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight=".7"
            android:src="@drawable/ic_app_logo"></androidx.appcompat.widget.AppCompatImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_param"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingTop="15dp"
        android:weightSum="1">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.AppTheme.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_style"
            app:boxStrokeColor="#FFF"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"

            app:passwordToggleEnabled="false"

            app:startIconDrawable="@drawable/ic_email">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="0dp"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@null"
                android:background="@drawable/et_style"
                android:drawableStart="@drawable/ic_password"
                android:fontFamily="@font/sfprodisplayregular"
                android:hint="@string/login_email"
                android:shadowColor="@color/white"
                android:textColor="@color/textcolor_light"
                android:textColorHint="@color/textcolor_light"></androidx.appcompat.widget.AppCompatEditText>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_child_params"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingTop="15dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.AppTheme.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_style"
            app:boxStrokeColor="#FFF"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="0dp"
                android:inputType="textPassword"
                android:textCursorDrawable="@null"
                android:background="@drawable/et_style"
                android:drawableStart="@drawable/ic_password"
                android:fontFamily="@font/sfprodisplayregular"
                android:hint="@string/login_password"
                android:shadowColor="@color/white"
                android:textColor="@color/textcolor_light"
                android:textColorHint="@color/textcolor_light"></androidx.appcompat.widget.AppCompatEditText>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_forgotPsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_param"
        android:padding="5dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forgot_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/sfprodisplaybold"
            android:gravity="right"
            android:text="@string/login_forgot_password"
            android:textColor="@color/appColor"
            android:textSize="15sp"></androidx.appcompat.widget.AppCompatTextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_checkParams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_forgotPsw"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_rememberme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:minHeight="40dp"
            app:buttonTint="@color/appColor" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/cb_rememberme"
            android:fontFamily="@font/sfprodisplaybold"
            android:text="@string/login_rememberme"
            android:textColor="@color/textcolor_light"
            android:textSize="15sp">

        </androidx.appcompat.widget.AppCompatTextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:weightSum="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_signIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_weight=".8"
            android:background="@drawable/bt_style"
            android:gravity="center"
            android:text="@string/login_signin"
            android:textColor="@color/white"></androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_singup_param"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_button_param"
        android:layout_centerInParent="true"
        android:padding="15dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/sfprodisplayregular"
            android:text="@string/login_create_account"
            android:textColor="@color/textcolor_light"></androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_info_text"
            android:fontFamily="@font/sfprodisplaybold"
            android:text="@string/login_signup"
            android:textColor="@color/signup"
            android:textSize="16sp"></androidx.appcompat.widget.AppCompatTextView>


    </RelativeLayout>

</LinearLayout>